--- a/templates/base/dashboard_base.html
+++ b/templates/base/dashboard_base.html
@@ -84,7 +84,7 @@
               <li class="dropdown dropdown-notification nav-item"><a class="nav-link nav-link-label" href="wallet.html"><i class="ficon icon-wallet"></i></a></li>
               <li class="dropdown dropdown-user nav-item"><a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">             
               <span class="avatar avatar-online"><img src="images/portrait/small/avatar-s-1.png" alt="avatar"></span>
-              <span class="mr-1">Level<span class="user-name text-bold-700">One</span></span></a>
+              <span class="mr-1">Level<span class="user-name text-bold-700">{{user.level.name}}</span></span></a>
                 <div class="dropdown-menu dropdown-menu-right">
                     <a class="dropdown-item" href="account-profile.html"><i class="ft-award"></i>{{ user.username }}</a>
                     <div class="dropdown-divider"></div>
@@ -127,9 +127,12 @@
 
     <div class="app-content content">
       <div class="content-wrapper">
+        {% block breadcrome %}
         <div class="content-header row">
         </div>
-
+        {% endblock breadcrome %}
+        {% block content %}
+        {% endblock content %}
       </div>
     </div>
     <footer class="footer footer-static footer-transparent">
