--- a/templates/base/dashboard_base.html
+++ b/templates/base/dashboard_base.html
@@ -86,9 +86,9 @@
               <span class="avatar avatar-online"><img src="images/portrait/small/avatar-s-1.png" alt="avatar"></span>
               <span class="mr-1">Level<span class="user-name text-bold-700">{{user.level.name}}</span></span></a>
                 <div class="dropdown-menu dropdown-menu-right">
-                    <a class="dropdown-item" href="account-profile.html"><i class="ft-award"></i>{{ user.username }}</a>
+                    <a class="dropdown-item" href="{% url 'user_profile' user.username %}"><i class="ft-award"></i>{{ user.username }}</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="account-profile.html"><i class="ft-user"></i> Profile</a>
+                    <a class="dropdown-item" href="{% url 'user_profile' user.username %}"><i class="ft-user"></i> Profile</a>
                     <a class="dropdown-item" href="wallet.html"><i class="icon-wallet"></i> My Wallet</a>
                     <a class="dropdown-item" href="transactions.html"><i class="ft-check-square"></i> Transactions</a>
                     <div class="dropdown-divider"></div><a class="dropdown-item" href="{% url 'account_logout' %}"><i class="ft-power"></i> Logout</a>
