--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -1,28 +1,10 @@
-{% extends 'base/dashboard_base.html' %}{% load referral_link static %}
+{% extends 'base/dashboard_base.html' %}{% load referral_link karma static %}
 {% block breadcrome %}
-<div class="content-header row">
-    <div class="content-header-left col-md-8 col-12 mb-2 breadcrumb-new">
-        <h3 class="content-header-title mb-0 d-inline-block">Account Profile</h3>
-            <div class="row breadcrumbs-top d-inline-block">
-              <div class="breadcrumb-wrapper col-12">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">Dashboard</a>
-                  </li>
-                  <li class="breadcrumb-item active">Account Profile
-                  </li>
-                </ol>
-              </div>
-            </div>
-          </div>
-          <div class="content-header-right col-md-4 col-12 d-none d-md-inline-block">
-        <div class="btn-group float-md-right"><a class="btn-gradient-secondary btn-sm white" href="wallet.html">Buy now</a></div>
-    </div>
-</div>
+{% include 'partials/breadcrumb.html' with current_page_name="Account Profile" %}
 {% endblock breadcrome %}
 
 {% block content %}
-        <div class="content-body">
-
+<div class="content-body">
 <div class="row">
     <div class="col-12 col-md-8">
         <!-- User Profile -->
@@ -36,15 +18,11 @@
                             </div>
                             <div class="col-md-10 col-12">
                                 <div class="row">
-                                    <div class="col-12 col-md-4">
-                                        <p class="text-bold-700 text-uppercase mb-0">Transactions</p>
-                                        <p class="mb-0">12/14</p>
-                                    </div>
-                                    <div class="col-12 col-md-4">
+                                    <div class="col-12 col-md-6">
                                         <p class="text-bold-700 text-uppercase mb-0">Last login</p>
                                         <p class="mb-0">{{user.last_login}}</p>
                                     </div>
-                                    <div class="col-12 col-md-4">
+                                    <div class="col-12 col-md-6">
                                         <p class="text-bold-700 text-uppercase mb-0">IP</p>
                                         <p class="mb-0">{{user.ip}}</p>
                                     </div>
@@ -102,25 +80,9 @@
                                         </fieldset>
                                     </div>
                                 </form>
-                                <p>This is your Crypto ICO referral link. You can use it to share the project with your friends and other interested parties. If any of them sign up with this link, they will get reward amounts to 1% and will be added to your referral program. Your reward amounts to 5.0% of all ICI tokens purchased by your referrals.</p>
-                                <h5 class="mt-3">Security</h5>
-                                <hr/>
-                                <div class="row">
-                                    <div class="col-9">
-                                        <p>Two-factor authorization</p>
-                                    </div>
-                                    <div class="col-3">
-                                        <input type="checkbox" id="switcherySize2" class="switchery" data-size="sm" checked/>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-9">
-                                        <p>Login notification</p>
-                                    </div>
-                                    <div class="col-3">
-                                        <input type="checkbox" id="switcherySize2" class="switchery" data-size="sm" />
-                                    </div>
-                                </div>
+                                <p>This is your Crypto ICO referral link. You can use it to share the project with your friends and other interested parties. 
+                                If any of them sign up with this link, they will get reward amounts to 1% and will be added to your referral program. 
+                                Your reward amounts to 5.0% of all ICI tokens purchased by your referrals.</p>
                             </div>
                         </div>
                     </div>
@@ -131,16 +93,15 @@
     <div class="col-12 col-md-4">
         <div class="card">
             <div class="card-header">
-                <h6 class="card-title text-center">ICO Tokens</h6>
+                <h6 class="card-title text-center">Queue</h6>
             </div>
             <div class="card-content collapse show">
                 <div class="card-body">
                     <div class="text-center row clearfix mb-2">
                         <div class="col-12">
-                            <i class="icon-layers font-large-3 bg-warning bg-glow white rounded-circle p-3 d-inline-block"></i>
+                            <i class="bg-warning bg-glow white rounded-circle p-3 d-inline-block">10</i>
                         </div>
                     </div>
-                    <h3 class="text-center">3,458.88 CIC</h3>
                 </div>
                 <div class="table-responsive">
                     <table class="table table-de mb-0">
@@ -170,26 +131,7 @@
                 </div>
             </div>
         </div>
-        <div class="card">
-        <div class="card-header">
-            <h6 class="card-title text-center">Token sale progress</h6>
-        </div>
-        <div class="card-content collapse show">
-            <div class="card-body">
-                <div class="font-small-3 clearfix">
-                    <span class="float-left">$0</span>
-                    <span class="float-right">$5M</span>
-                </div>
-                <div class="progress progress-sm my-1 box-shadow-2">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <div class="font-small-3 clearfix">
-                    <span class="float-left">Distributed <br> <strong>6,235,125 CIC</strong></span>
-                    <span class="float-right text-right">Contributed  <br> <strong>5478 ETH | 80 BTC</strong></span>
-                </div>
-            </div>
-        </div>
-    </div>
+        {% karma %}
     </div>
 </div>
         </div>
