level page layout

--- a/templates/base/dashboard_base.html
+++ b/templates/base/dashboard_base.html
@@ -127,10 +127,10 @@
 
     <div class="app-content content">
       <div class="content-wrapper">
-        {% block breadcrome %}
+        {% block breadcrumb %}
         <div class="content-header row">
         </div>
-        {% endblock breadcrome %}
+        {% endblock breadcrumb %}
         {% block content %}
         {% endblock content %}
       </div>
