--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -1,7 +1,7 @@
 {% extends 'base/dashboard_base.html' %}{% load referral_link karma static %}
-{% block breadcrome %}
+{% block breadcrumb %}
 {% include 'partials/breadcrumb.html' with current_page_name="Account Profile" %}
-{% endblock breadcrome %}
+{% endblock breadcrumb %}
 
 {% block content %}
 <div class="content-body">
