--- a/templates/base/dashboard_base.html
+++ b/templates/base/dashboard_base.html
@@ -8,13 +8,12 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/ico/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,600,600i,700,700i|Comfortaa:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/vendors.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/charts/chartist.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/charts/chartist-plugin-tooltip.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/app.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-compact-menu.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/cryptocoins/cryptocoins.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/pages/timeline.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/pages/dashboard-ico.min.css' %}">
+    {% block css %}
+    {% endblock css %}
   </head>
   <body class="vertical-layout vertical-compact-menu 2-columns   menu-expanded fixed-navbar" data-open="click" data-menu="vertical-compact-menu" data-col="2-columns">
 
@@ -139,11 +138,10 @@
       <p class="clearfix blue-grey lighten-2 text-sm-center mb-0 px-2"><span class="float-md-left d-block d-md-inline-block">Copyright  &copy; 2018 <a class="text-bold-800 grey darken-2" href="" target="_blank">Ochui Princewill </a>, All rights reserved. </span><span class="float-md-right d-block d-md-inline-blockd-none d-lg-block">Hand-crafted & Made with <i class="ft-heart pink"></i></span></p>
     </footer>
     <script src="{% static 'vendors/js/vendors.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'vendors/js/charts/chartist.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'vendors/js/charts/chartist-plugin-tooltip.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'vendors/js/timeline/horizontal-timeline.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/core/app-menu.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/core/app.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/scripts/pages/dashboard-ico.min.js' %}" type="text/javascript"></script>
+    {% block javascript %}
+    {% endblock javascript %}
   </body>
 </html>
