--- a/templates/base/dashboard_base.html
+++ b/templates/base/dashboard_base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/vendors.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/app.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-compact-menu.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/cryptocoins/cryptocoins.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cryptocoins-icons@2.9.0/webfont/cryptocoins.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/pages/timeline.min.css' %}">
     {% block css %}
     {% endblock css %}
@@ -24,7 +24,7 @@
           <ul class="nav navbar-nav flex-row">
             <li class="nav-item mobile-menu d-md-none mr-auto"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i class="ft-menu font-large-1"></i></a></li>
             <li class="nav-item d-md-none"><a class="navbar-brand" href="index.html"><img class="brand-logo d-none d-md-block" alt="logo" src="images/logo/logo.png"><img class="brand-logo d-sm-block d-md-none" alt="logo sm" src="images/logo/logo-sm.png"></a></li>
-            <li class="nav-item d-md-none"><a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="la la-ellipsis-v">   </i></a></li>
+            <li class="nav-item d-md-none"><a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="fa fa-ellipsis-v">   </i></a></li>
           </ul>
         </div>
         <div class="navbar-container">
