--- a/templates/dashboard/peer.html
+++ b/templates/dashboard/peer.html
@@ -1,4 +1,4 @@
-{% extends 'base/dashboard_base.html' %}
+{% extends 'base/dashboard_base.html' %}{% load avatar_tags %}
 {% block breadcrumb %}
 {% include 'partials/breadcrumb.html' with current_page_name="Peers" %}
 {% endblock breadcrumb %}
@@ -27,7 +27,7 @@
                     <div class="row">
                       <div class="col-md-6 col-12 py-1">
                         <div class="media">
-                          <i class="cc BTC mr-2 font-large-2 warning"></i>
+                          {% avatar peer.username %}
                           <div class="media-body">
                             <h5 class="mt-0 text-capitalize">{{peer.username}}</h5>
                             <p class="text-muted mb-0 font-small-3 wallet-address">{{user.phone_number}}</p>
