--- a/templates/referrals/flat_referral_list.html
+++ b/templates/referrals/flat_referral_list.html
@@ -1,13 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    {% load referrals %}
-    {{flat_referral_list}}
-</body>
-</html>
+{% extends 'base/dashboard_base.html' %}{% load referrals %}
+{% block breadcrumb %}
+{% include 'partials/breadcrumb.html' with current_page_name="Referrals" %}
+{% endblock breadcrumb %}
+{% block content %}
+<div class="content-body">
+  <div id="history">
+    <div class="history-table-th d-none d-md-block">
+      <div class="col-12">
+        <div class="row px-1">
+          <div class="col-md-3 col-12 py-1">
+            <p class="mb-0">Username</p>
+          </div>
+          <div class="col-md-3 col-12 py-1">
+            <p class="mb-0">Phone Number</p>
+          </div>
+          <div class="col-md-3 col-12 py-1">
+            <p class="mb-0">Expires</p>
+          </div>
+          <div class="col-md-3 col-12 py-1">
+            <p class="mb-0">Status</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="history-table-tbody">
+      {% for referral in flat_referral_list %}<section class="card pull-up">
+        <div class="card-content">
+          <div class="card-body">
+            <div class="col-12">
+              <div class="row">
+                <div class="col-md-3 col-12 py-1">
+                  <p class="mb-0"><span class="d-inline-block d-md-none text-bold-700">Username: </span> {{referral.referred}}</p>
+                </div>
+                <div class="col-md-3 col-12 py-1">
+                  <p class="mb-0"><span class="d-inline-block d-md-none text-bold-700">Phone Number: </span> {{referral.referred.phone_number}}</p>
+                </div>
+                <div class="col-md-3 col-12 py-1">
+                  <p class="mb-0"><span class="d-inline-block d-md-none text-bold-700">Expires: </span> {{referral.expires_at}}</p>
+                </div>
+                <div class="col-md-3 col-12 py-1">
+                  <p class="mb-0 success"><span class="d-inline-block d-md-none text-bold-700">Status: </span> {{referral.status}}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>{% endfor %}
+      {% if is_paginated %}<nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center pagination-separate pagination-flat">
+          {% if page_obj.has_previous %}<li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">« Prev</span>
+              <span class="sr-only">Previous</span>
+            </a>
+          </li>{% endif %}
+          <li class="page-item active"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">4</a></li>
+          <li class="page-item"><a class="page-link" href="#">5</a></li>
+          {% if page_obj.has_next %}<li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">Next »</span>
+              <span class="sr-only">Next</span>
+            </a>
+          </li>{% endif %}
+        </ul>
+      </nav>{% endif %}
+    </div>
+  </div>
+</div>
+{% endblock content %}
