--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -77,83 +77,21 @@
                                     <th class="border-top-0">Status</th>
                                     <th class="border-top-0">Date</th>
                                     <th class="border-top-0">Amount</th>
-                                    <th class="border-top-0">Currency</th>
-                                    <th class="border-top-0">Currency</th>
-                                    <th class="border-top-0">Tokens (CIC)</th>
+                                    <th class="border-top-0">Type</th>
                                     <th class="border-top-0">Details</th>
-                                    <th class="border-top-0"></th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
+                                {% for transaction in lastest_transactions %}<tr>
                                     <td class="text-truncate"><i
-                                            class="la la-dot-circle-o success font-medium-1 mr-1"></i> Paid</td>
-                                    <td class="text-truncate"><a href="#">2018-01-03</a></td>
+                                            class="fa fa-dot-circle-o success font-medium-1 mr-1"></i> {{transaction.status}}</td>
+                                    <td class="text-truncate"><a href="#">{{transaction.created}}</a></td>
                                     <td class="text-truncate">
                                         <a href="#" class="mb-0 btn-sm btn btn-outline-success round">Deposit</a>
                                     </td>
                                     <td class="text-truncate p-1">5.34111</td>
-                                    <td>
-                                        <i class="cc ETH-alt"></i> ETH
-                                    </td>
-                                    <td>-</td>
-                                    <td class="text-truncate">Deposit to your Balance</td>
-                                    <td><i class="la la-thumbs-up warning float-right"></i></td>
-                                </tr>
-                                <tr>
-                                    <td class="text-truncate"><i
-                                            class="la la-dot-circle-o success font-medium-1 mr-1"></i> Paid</td>
-                                    <td class="text-truncate"><a href="#">2018-01-03</a></td>
-                                    <td class="text-truncate">
-                                        <a href="#" class="mb-0 btn-sm btn btn-outline-success round">Deposit</a>
-                                    </td>
-                                    <td class="text-truncate p-1">5.34111</td>
-                                    <td>
-                                        <i class="cc ETH-alt"></i> ETH
-                                    </td>
-                                    <td>3,258</td>
-                                    <td class="text-truncate">Tokens Purchase</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td class="text-truncate"><i
-                                            class="la la-dot-circle-o warning font-medium-1 mr-1"></i> in Process</td>
-                                    <td class="text-truncate"><a href="#">2018-01-21</a></td>
-                                    <td class="text-truncate">
-                                        <a href="#" class="mb-0 btn-sm btn btn-outline-warning round">Referral</a>
-                                    </td>
-                                    <td class="text-truncate p-1">-</td>
-                                    <td>-</td>
-                                    <td>200.88</td>
-                                    <td class="text-truncate">Referral Promo Bonus</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td class="text-truncate"><i
-                                            class="la la-dot-circle-o danger font-medium-1 mr-1"></i> Pending</td>
-                                    <td class="text-truncate"><a href="#">2018-01-25</a></td>
-                                    <td class="text-truncate">
-                                        <a href="#" class="mb-0 btn-sm btn btn-outline-danger round">Withdrawal</a>
-                                    </td>
-                                    <td class="text-truncate p-1">-</td>
-                                    <td>-</td>
-                                    <td>-3,458.88</td>
-                                    <td class="text-truncate">Tokens withdrawn</td>
-                                    <td><i class="la la-dollar warning float-right"></i></td>
-                                </tr>
-                                <tr>
-                                    <td class="text-truncate"><i
-                                            class="la la-dot-circle-o success font-medium-1 mr-1"></i> Paid</td>
-                                    <td class="text-truncate"><a href="#">2018-01-28</a></td>
-                                    <td class="text-truncate">
-                                        <a href="#" class="mb-0 btn-sm btn btn-outline-danger round">Deposit</a>
-                                    </td>
-                                    <td class="text-truncate p-1">0.8791</td>
-                                    <td><i class="cc BTC-alt"></i> BTC</td>
-                                    <td>--</td>
-                                    <td class="text-truncate">Deposit to your Balance</td>
-                                    <td><i class="la la-thumbs-up warning float-right"></i></td>
-                                </tr>
+                                    <td class="text-truncate">{{transaction.descriptions}}</td>
+                                </tr>{% endfor %}
                             </tbody>
                         </table>
                     </div>
@@ -165,7 +103,7 @@
     <!-- Basic Horizontal Timeline -->
     <div class="row match-height">
         <div class="col-xl-4 col-lg-12">
-            <h6 class="my-2">Latest updates</h6>
+            <h6 class="my-2">Ads</h6>
             <div class="card">
                 <div class="card-content">
                     <img class="img-fluid"
